force-app/main/default/objects/Game__c/fields/DiscardPile__c.field-meta.xml
<CustomField>
    <fullName>DiscardPile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discard Pile</label>
    <referenceTo>Pile__c</referenceTo>
    <relationshipLabel>Dicard Pile Games</relationshipLabel>
    <relationshipName>DiscardPileGames</relationshipName>
    <type>Lookup</type>
</CustomField>