force-app/main/default/objects/Game__c/fields/DrawPile__c.field-meta.xml
<CustomField>
    <fullName>DrawPile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Draw Pile</label>
    <referenceTo>Pile__c</referenceTo>
    <relationshipLabel>Draw Pile Games</relationshipLabel>
    <relationshipName>DrawPileGames</relationshipName>
    <type>Lookup</type>
</CustomField>