force-app/main/default/objects/Game__c/fields/IsReversed__c.field-meta.xml
<CustomField>
    <fullName>IsReversed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Game&apos;s Player rotation is reversed.</description>
    <inlineHelpText>When checked, the Game&apos;s Player rotation is reversed.</inlineHelpText>
    <label>Reversed?</label>
    <type>Checkbox</type>
</CustomField>