force-app/main/default/objects/Game__c/fields/TopCard__c.field-meta.xml
<CustomField>
    <fullName>TopCard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Top Card (Game Card) in the Discard Pile of a Game.</description>
    <inlineHelpText>Top Card (Game Card) in the Discard Pile of a Game.</inlineHelpText>
    <label>Top Card</label>
    <referenceTo>GameCard__c</referenceTo>
    <relationshipLabel>Games</relationshipLabel>
    <relationshipName>Games</relationshipName>
    <type>Lookup</type>
</CustomField>