force-app/main/default/objects/Game__c/fields/TopCardColor__c.field-meta.xml
<CustomField>
    <fullName>TopCardColor__c</fullName>
    <label>Top Card Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CardColors</valueSetName>
    </valueSet>
</CustomField>